<resources>
    <string name="app_name">Retrofit Project</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="lastname">lastName</string>
    <string name="firstname">firstName</string>
    <string name="sign_in">Sign in</string>
</resources>